<resources>
    <string name="app_name">Favorite</string>
    <string name="ver">1.9.0.5108</string>
    <string name="build">5108</string>
    <string name="api_version">1</string>
    <string name="pic_size_devide">1</string>
    <string name="verkind">Beta</string>
    <string name="copyright">Copyrightⓒ 2014 Tarks.</string>
    <string name="lang">en</string>
    <string name="default_country">us</string>
    <string name="server_path">http://tarks.net/develop/favorite/</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="app_info">Application Information..</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="app_setting">Application Settings</string>
    <string name="appinfo">Application Information</string>
    <string name="setting">Settings</string>
    <string name="networkerror">Network Error</string>
    <string name="networkerrord">Unstable Internet connection.</string>
    <string name="refresh">Refresh</string>
    <string name="community">Community</string>
    <string name="moreview">More</string>
    <string name="alert">Alert</string>
    <string name="details">Details</string>
    <string name="contacts">Contacts</string>
    <string name="request">Request</string>
    <string name="sign_up">Sign up</string>
    <string name="saved">Saved.</string>
    <string name="logout">Logout</string>
    <string name="notice">Notice</string>
    <string name="notification">Notification</string>
    <string name="share">Share</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="start">Start</string>
    <string name="tarks_account">Tarks Account</string>
    <string name="id">User ID</string>
    <string name="password">Password</string>
    <string name="type_id">Enter your Id.</string>
    <string name="signing_in">Signing in...</string>
    <string name="welcome">Welcome</string>
    <string name="error_login">Wrong user ID or Password.</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="registering">Registering...</string>
    <string name="noname">Enter your name.</string>
    <string name="error_des">An error occurred while work was in progress. Please try again in a few minutes.</string>
    <string name="permission_denied">Sorry. This user blocked because rule violation.</string>
    <string name="reg_id_error">Authentication information has changed. Account information must be recertified.</string>
    <string name="not_support_feature">Not Supported feature</string>
    <string name="skip">Skip</string>
    <string name="join">Join</string>
    <string name="user_info_des">It is Almost Finished. Enter your name.\nIf you continue you agree Favorite terms of use.\n\nhttp://tarks.net/favorite/agreement.html</string>
    <string name="name_1">First Name</string>
    <string name="name_2">Last Name</string>
    <string name="phone_number_des">Find by phone number</string>
    <string name="phone_number_content">Enter your phone number to find who was favorited you.</string>
    <string name="birthday">Birthday</string>
    <string name="location">Location</string>
    <string name="school">School</string>
    <string name="find">Find</string>
    <string name="message">Message</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="register_favorite">Register Favorite</string>
    <string name="check_result">Check result</string>
    <string name="test_result">%2$s people like %1$s.</string>
    <string name="asky">ASKY</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="my_favorite_people">My Favorites</string>
    <string name="people_that_like_me">People that like me</string>
    <string name="check_with_kakaostory">Check with KakaoStory</string>
    <string name="check_with_kakaotalk">Check with KakaoTalk</string>
    <string name="check_with_facebook">Check with Facebook</string>
    <string name="check_with_twitter">Check with Twitter</string>
    <string name="contact_pick_error.">Contact is not available.</string>
    <string name="blank_error">No value on textfield.</string>
    <string name="server_connection_error_des">Server connection has been error. Maybe checking or server problem. More details click \'Service status\'.</string>
    <string name="check_service_status">Service status</string>
    <string name="male">Male</string>
    <string name="female">Felmale</string>
    <string name="cut_image">Cut Image</string>
    <string name="rotate">Rotate</string>
    <string name="find_account">Find Account</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="send_feedback_des">Send feedback to Developers</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted.</string>
    <string name="delete_des">Do you want to delete?</string>
    <string name="delete_profile_photo">Delete profile photo.</string>
    <string name="profile">Profile</string>
    <string name="profile_settings_des">Set your profile.</string>
    <string name="user_settings">User Settings</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="camera">Camera</string>
    <string name="no_storage_error">No SDCard or any storage.</string>
    <string name="enquire">Enquire</string>
    <string name="choose_email_app">Choose Email Application</string>
    <string name="write">Write</string>
    <string name="information">Information</string>
    <string name="user_info">User Information</string>
    <string name="gender">Gender</string>
    <string name="unknown_info_error_des">Sorry, this page doesn\'t exist.</string>
    <string name="type_a_comment">Type a comment.</string>
    <string name="a_moment_ago">a moment ago</string>
    <string name="no_content">Content is Empty.</string>
    <string name="date">"MM/dd/yyyy"</string>
    <string name="date_all">MM/dd/yyyy hh:mm aa</string>
    <string name="see_previous_comments">See previous comments</string>
    <string name="copy">Copy</string>
    <string name="warning">Warning</string>
    <string name="notice_new_document">Wrote new document</string>
    <string name="notice_new_comment">Commented on a post</string>
    <string name="add">Add</string>
    <string name="favorite_add_des">Do you want to add to favorite?</string>
    <string name="added">Added.</string>
    <string name="notice_added_to_favorite">Added you to favorite.</string>
    <string name="ip_error_des">Your IP was blocked cause you have abnormal activity.</string>
    <string name="sign_in">Sign in</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_explain">%1$s</string>
    <string name="changed">changed.</string>
    <string name="my_favorites">My Favorites</string>
    <string name="favorites">Favorites</string>
    <string name="photo">Photo</string>
    <string name="file">File</string>
    <string name="pages">Pages</string>
    <string name="right_now">Right Now</string>
    <string name="notification_and_sound">Notification and Sound</string>
    <string name="app_settings">Application Settings</string>
    <string name="welcome_des">This space is view of your favorites.\nAdd favorite to get a news.</string>
    <string name="tour_page">Tour Pages</string>
    <string name="create_page">Create page</string>
    <string name="create_page_des">Try Create a page.\n\nYou can make a community easily with your friends.</string>
    <string name="page_name">Page Name</string>
    <string name="start_downloading">Start downloading...</string>
    <string name="loading">Loading...</string>
    <string name="find_pages_by_contacts">Find pages by Contacts</string>
    <string name="invite">Invite</string>
    <string name="invite_message">Join Favorite to find your communities. :)\nhttps://play.google.com/store/apps/details?id=com.tarks.favorite</string>
    <string name="cancel_writing_des">You are writing now. Are you sure you want to cancel this post?</string>
    <string name="change_user">Change User</string>
    <string name="change_user_des">You will write posts and comments by this page. \nRestart to Continue.</string>
    <string name="change_user_default_des">Go back to your default user. \nRestart to Continue.</string>
    <string name="popularity">Popularity</string>
    <string name="no_contact_des">No users in contacts. You can invite your friends.</string>
    <string name="page_delete_des">Delete this page. If continue this, page will be delete with posts and comments can not restore. Continue?</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="completed">Completed</string>
    <string name="delete_favorite_des">Unfavorite this page. You will no loger get updates from this page. Are you sure to you want to Continue?</string>
    <string name="search">Search</string>
    <string name="doc_error_des">This post does not exist.</string>
    <string name="continu">Continue</string>
    <string name="find_page">Find Page</string>
    <string name="page_code">Page Code</string>
    <string name="email">Email</string>
    <string name="email_type_des">Please enter your email correctly.</string>
    <string name="id_type_des">Please enter your User ID correctly. (3~20)</string>
    <string name="password_type_des">Please enter your password correctly. (6~20)</string>
    <string name="id_password_special_char_error">You can not use special characters at user id</string>
    <string name="sign_up_email_exist">This Email address already exists. Please try another one.</string>
    <string name="sign_up_id_exist">This User ID already exists. Please try another one.</string>
    <string name="welcome_subtitle">Most Colorful Community Application</string>
    <string name="sign_up_without_id_des">You can not access your account when you change your device or reinstall application. Continue?</string>
    <string name="sign_up_without_id">Sign up Without ID</string>
    <string name="permission">Permission</string>
    <string name="write_permission">Write Permission</string>
    <string name="attach">Attach</string>
    <string name="attach_file">File</string>
    <string name="privacy_content">Privacy</string>
    <string name="privacy_public">Public</string>
    <string name="privacy_users">Users</string>
    <string name="privacy_relation">All Relation</string>
    <string name="privacy_favorites">Favorties</string>
    <string name="privacy_justme">Secret</string>
    <string name="privacy_public_des">All people are can see.</string>
    <string name="privacy_users_des">Favorite members can see.</string>
    <string name="privacy_relation_des">favorites, and who like you can see.</string>
    <string name="privacy_favorites_des">favorites can see.</string>
    <string name="privacy_justme_des">You, writer and page admin can see.</string>
    <string name="wr_permission_public">Public</string>
    <string name="wr_permission_users">Users</string>
    <string name="wr_permission_relation">All Relation</string>
    <string name="wr_permission_favorites">Favorties</string>
    <string name="wr_permission_justme">Just Me</string>
    <string name="wr_permission_public_des">All people are can write.</string>
    <string name="wr_permission_users_des">Favorite members are can write.</string>
    <string name="wr_permission_relation_des">Favorites, and who like you can write.</string>
    <string name="wr_permission_favorites_des">Favorites can write.</string>
    <string name="wr_permission_justme_des">Just you can write.</string>
</resources>