<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:ems="15"
        android:layout_alignParentTop="true"
        android:layout_marginTop="53dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
                android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="15"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
        android:layout_below="@+id/email_edittext"
        android:layout_marginTop="32dp"
        android:ems="15"
        android:hint="@string/id"
        android:singleLine="true" />

</RelativeLayout>